--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user  www-data;
+user  nginx;
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
@@ -6,6 +6,7 @@ pid        /var/run/nginx.pid;
 
 events {
     worker_connections  1024;
+    multi_accept on;
 }
 
 http {
@@ -19,11 +20,15 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
 
     keepalive_timeout  65;
+    client_max_body_size 100M;
 
-    #gzip  on;
+    gzip  on;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     # 简化的CORS处理 - 使用map来检测OPTIONS请求
     map $request_method $cors_method {
@@ -35,10 +40,10 @@ http {
         listen 80;
         server_name localhost;
 
-        # 简单的CORS响应头
-        add_header Access-Control-Allow-Origin '*';
-        add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE';
-        add_header Access-Control-Allow-Headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+        # 全局CORS设置
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
 
         # 前端静态文件
         location / {
@@ -47,36 +52,79 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        # 处理OPTIONS请求的简化方法
-        location /api/ {
-            if ($cors_method) {
-                add_header Content-Type 'text/plain charset=UTF-8';
-                add_header Content-Length 0;
-                add_header Access-Control-Allow-Origin '*';
-                add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE';
-                add_header Access-Control-Allow-Headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-                add_header Access-Control-Max-Age 1728000;
+        # 专门处理OPTIONS请求
+        location = /api/ {
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+                add_header 'Access-Control-Max-Age' 1728000 always;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
                 return 204;
             }
+            return 301 /api/docs;
+        }
+
+        # API请求代理
+        location /api/ {
+            # 处理OPTIONS请求
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+                add_header 'Access-Control-Max-Age' 1728000 always;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
             proxy_pass http://backend:8001/api/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # 增加超时设置
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
+            
+            # 禁用缓存
+            proxy_no_cache 1;
+            proxy_cache_bypass 1;
         }
 
+        # 下载文件
         location /downloads/ {
             proxy_pass http://backend:8001/downloads/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
+            # 增加超时设置，适合下载大文件
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
+            
+            # 支持大文件
+            client_max_body_size 100M;
         }
 
+        # 预览文件
         location /previews/ {
             proxy_pass http://backend:8001/previews/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
+            # 增加超时设置
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
         }
 
         error_page   500 502 503 504  /50x.html;
